fix : todo m상세 수정 로직 오류 수정